--- a/style.css
+++ b/style.css
@@ -3,9 +3,18 @@ body {
     background-color: black;
 }
 
+#infoDiv{
+    position: relative;
+    text-align: center;
+    background-color: rgb(100,100,100);
+    width: 100%;
+    height: 100px;
+    margin-bottom: 50px;
+}
+
 #image{
-    width: 70vh;
-    height: 70vh;
+    width: 50vh;
+    height: 50vh;
 }
 
 #imageDiv {
@@ -39,7 +48,7 @@ body {
     height:10vh;
 }
 .btnSmall {
-    width:16.5vw;
+    width:12vw;
     height:5vh;
     margin-right: 5px;
     margin-left: 5px;
